wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
spec:
  selector:
    app: wikijs
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
